adds color field, uppercase directive and breadcrumb

--- a/src/app/pages/log-work/form/containers/doctor/doctor.component.html
+++ b/src/app/pages/log-work/form/containers/doctor/doctor.component.html
@@ -34,7 +34,13 @@
                                         !dgc.doctorFormGroupControls[i]?.value
                                             ?.doctor
                                     "
-                                    (click)="onGoToDoctor(i)"
+                                    (click)="
+                                        onGoToDoctor(
+                                            i,
+                                            dgc.doctorFormGroupControls[i]
+                                                ?.value?.doctor
+                                        )
+                                    "
                                 >
                                     <ion-icon
                                         name="arrow-forward-outline"
