--- a/src/app/pages/log-work/log-work.component.scss
+++ b/src/app/pages/log-work/log-work.component.scss
@@ -20,9 +20,9 @@
             flex-direction: column;
             align-items: center;
 
-            ion-datetime {
-                border: 1px solid var(--ion-color-background);
-            }
+            // ion-datetime {
+            //     border: 1px solid var(--ion-color-background);
+            // }
         }
     }
 }
