--- a/src/app/pages/setup/containers/setup-work-item/add-edit-work-item/add-edit-work-item.component.html
+++ b/src/app/pages/setup/containers/setup-work-item/add-edit-work-item/add-edit-work-item.component.html
@@ -12,6 +12,7 @@
     <form [formGroup]="workItemForm">
         <ion-item>
             <ion-input
+                appUppercase
                 label="Name"
                 labelPlacement="floating"
                 formControlName="name"
@@ -28,6 +29,7 @@
         </ion-item>
         <ion-item>
             <ion-input
+                appUppercase
                 label="Description"
                 labelPlacement="floating"
                 formControlName="description"
