adds accordion component for color selection

--- a/src/app/pages/log-work/form/components/searcheable-select-input/searcheable-select-input.component.html
+++ b/src/app/pages/log-work/form/components/searcheable-select-input/searcheable-select-input.component.html
@@ -5,7 +5,8 @@
     labelPlacement="floating"
     readonly
     [ngModel]="selectedValue"
-></ion-input>
+>
+</ion-input>
 
 <ion-note
     *ngIf="attachedFormControl?.errors; let errors"
