--- a/src/app/pages/log-work/form/components/searcheable-select-input/searcheable-select-input.component.scss
+++ b/src/app/pages/log-work/form/components/searcheable-select-input/searcheable-select-input.component.scss
@@ -1,7 +1,7 @@
 :host {
 	ion-input {
 		--padding-start: 7px;
-		--padding-end: 35px;
+		// --padding-end: 35px;
 
 		// border-radius: 8px;
 		// border: solid 2px;
