--- a/src/app/pages/log-work/form/components/searcheable-select/searcheable-select.component.html
+++ b/src/app/pages/log-work/form/components/searcheable-select/searcheable-select.component.html
@@ -28,7 +28,7 @@
         </ion-row>
     </ion-grid>
 </ion-header>
-<ion-content class="inner-content app-inner-padding">
+<ion-content class="inner-content app-inner-padding" supressTouchMove>
     <ion-list
         lines="none"
         class="ion-no-padding"
@@ -42,33 +42,81 @@
         >
             Leave empty
         </ion-item>
-        <ion-item
-            lines="none"
-            *ngFor="let item of displayedOptions"
-            (click)="onItemSelected(item)"
-            [ngClass]="item.isSelected ? 'selected' : ''"
-            class="ion-no-padding"
-        >
-            <ion-grid class="ion-no-padding">
-                <ion-row>
-                    <ion-col size="12">
-                        <ion-label>{{ item.value }}</ion-label>
-                        <!-- <ion-icon class="close-sharp"></ion-icon> -->
-                        <!-- <ion-icon name="close-sharp"></ion-icon> -->
-                    </ion-col>
-                </ion-row>
-                <ion-row>
-                    <ion-col size="12">
-                        <ion-label *ngIf="item.displayBoth; else emptyDesc">{{
-                            item.description
-                        }}</ion-label>
-                        <ng-template #emptyDesc
-                            ><ion-label></ion-label
-                        ></ng-template>
-                    </ion-col>
-                </ion-row>
-            </ion-grid>
-        </ion-item>
+        <ng-container *ngIf="groups?.length; else listDisplay">
+            <ion-accordion-group
+                expand="inset"
+                #ionAccordionGroup
+                [multiple]="true"
+            >
+                <ion-accordion *ngFor="let gr of groups" [value]="gr">
+                    <ion-item slot="header" color="theme">
+                        <ion-label>{{ gr }}</ion-label>
+                    </ion-item>
+                    <div class="ion-padding" slot="content">
+                        <ion-item
+                            lines="none"
+                            *ngFor="
+                                let item of filterDisplayedOptions(gr) | async
+                            "
+                            (click)="onItemSelected(item)"
+                            [ngClass]="item.isSelected ? 'selected' : ''"
+                            class="ion-no-padding"
+                        >
+                            <ion-grid class="ion-no-padding">
+                                <ion-row>
+                                    <ion-col size="12">
+                                        <ion-label>{{ item.value }}</ion-label>
+                                    </ion-col>
+                                </ion-row>
+                                <ion-row>
+                                    <ion-col size="12">
+                                        <ion-label
+                                            *ngIf="
+                                                item.displayBoth;
+                                                else emptyDesc
+                                            "
+                                            >{{ item.description }}</ion-label
+                                        >
+                                        <ng-template #emptyDesc
+                                            ><ion-label></ion-label
+                                        ></ng-template>
+                                    </ion-col>
+                                </ion-row>
+                            </ion-grid>
+                        </ion-item>
+                    </div>
+                </ion-accordion>
+            </ion-accordion-group>
+        </ng-container>
+
+        <ng-template #listDisplay>
+            <ion-item
+                lines="none"
+                *ngFor="let item of displayedOptions"
+                (click)="onItemSelected(item)"
+                [ngClass]="item.isSelected ? 'selected' : ''"
+                class="ion-no-padding"
+            >
+                <ion-grid class="ion-no-padding">
+                    <ion-row>
+                        <ion-col size="12">
+                            <ion-label>{{ item.value }}</ion-label>
+                        </ion-col>
+                    </ion-row>
+                    <ion-row>
+                        <ion-col size="12">
+                            <ion-label
+                                *ngIf="item.displayBoth; else emptyDesc"
+                                >{{ item.description }}</ion-label
+                            >
+                            <ng-template #emptyDesc
+                                ><ion-label></ion-label
+                            ></ng-template>
+                        </ion-col>
+                    </ion-row>
+                </ion-grid>
+            </ion-item>
+        </ng-template>
     </ion-list>
 
     <ng-template #noData>
