updates android version; handles ios notch height; handles user duplication validation

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -15,7 +15,10 @@
         </ion-buttons>
         <ion-title>{{ title }}</ion-title>
     </ion-toolbar>
-    <div class="custom-shape-divider-top-1707164763">
+    <div
+        class="custom-shape-divider-top-1707164763"
+        [ngStyle]="getHeaderThreshold()"
+    >
         <svg
             data-name="Layer 1"
             xmlns="http://www.w3.org/2000/svg"
