adds some minor ui fixes and increases version

--- a/src/global.scss
+++ b/src/global.scss
@@ -176,3 +176,7 @@ ion-checkbox::part(container) {
     border-radius: 6px;
     border: 2px solid #0b0318;
 }
+
+app-header {
+    margin-bottom: 50px;
+}
