implements account deletion

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -52,7 +52,7 @@
         }
 
         .custom-shape-divider-top-1707164763 .shape-fill {
-            fill: #8f73a7;
+            fill: var(--ion-color-background);
         }
 
         /** For mobile devices **/
