--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true" no-border no-shadow class="ion-no-border">
+<ion-header  no-border no-shadow class="ion-no-border">
     <ion-toolbar class="title" lines="none">
         <ion-buttons slot="start">
             <ion-button *ngIf="backBtnEnabled" (click)="goBack()">
