adds more validations on breaks; no special char in number inputs

--- a/src/app/pages/log-work/form/containers/pacient/pacient.component.html
+++ b/src/app/pages/log-work/form/containers/pacient/pacient.component.html
@@ -17,7 +17,7 @@
                 }"
                     (itemSlidingDelete)="removePatientControl(j, pgc.doctorIdx)"
                 >
-                    <ion-item [formGroupName]="j">
+                    <ion-item [formGroupName]="j" lines="none">
                         <ion-input
                             appUppercase
                             formControlName="patient"
