--- a/src/app/pages/log-work/form/components/searcheable-select-input/searcheable-select-input.component.scss
+++ b/src/app/pages/log-work/form/components/searcheable-select-input/searcheable-select-input.component.scss
@@ -1,43 +1,39 @@
 :host {
-	ion-input {
-		--padding-start: 7px;
-		// --padding-end: 35px;
+    ion-input {
+        --padding-start: 7px;
+        text-overflow: ellipsis;
+        font-size: 14px;
+        color: var(----ion-text-color);
+        font-family: var(--ion-font-family-bold);
 
-		// border-radius: 8px;
-		// border: solid 2px;
-		// border-color: var(--ion-color-light-09);
-		font-size: 14px;
-		color: var(----ion-text-color);
-		font-family: var(--ion-font-family-bold);
+        label {
+            color: var(--ion-color-dark-04);
+            font-size: 16px;
+            font-family: var(--ion-font-family-bold);
+        }
 
-		label {
-			color: var(--ion-color-dark-04);
-			font-size: 16px;
-			font-family: var(--ion-font-family-bold);
-		}
+        &.error-class {
+            border-color: var(--ion-color-error);
+        }
+        &.disabled-class {
+            color: var(--ion-color-light-04);
+            border-color: var(--ion-color-light-07);
+        }
+    }
 
-		&.error-class {
-			border-color: var(--ion-color-error);
-		}
-		&.disabled-class {
-			color: var(--ion-color-light-04);
-			border-color: var(--ion-color-light-07);
-		}
-	}
+    ion-icon {
+        position: absolute;
+        top: 10px;
+        right: 7px;
+        font-size: 10px;
+        color: var(--ion-color-dark-04);
 
-	ion-icon {
-		position: absolute;
-		top: 10px;
-		right: 7px;
-		font-size: 10px;
-		color: var(--ion-color-dark-04);
+        &.disabled-class {
+            color: var(--ion-color-light-09);
+        }
+    }
 
-		&.disabled-class {
-			color: var(--ion-color-light-09);
-		}
-	}
-
-	ion-note {
-		font-size: 13px;
-	}
+    ion-note {
+        font-size: 13px;
+    }
 }
