--- a/src/app/pages/log-work/form/containers/work-item/work-item.component.scss
+++ b/src/app/pages/log-work/form/containers/work-item/work-item.component.scss
@@ -14,6 +14,9 @@
                         // display: flex;
                         // justify-content: center;
                         // align-items: center;
+                        app-search-select-input {
+                            width: 100%;
+                        }
 
                         ion-note {
                             font-size: 13px;
