--- a/src/global.scss
+++ b/src/global.scss
@@ -37,12 +37,13 @@
     --ion-text-color: #62545d;
     --ion-text-color-rgb: 136, 19, 55;
 
-    --ion-color-theme: #8F73A7;
-	--ion-color-theme-rgb: 143,115,167;
-	--ion-color-theme-contrast: #000000;
-	--ion-color-theme-contrast-rgb: 0,0,0;
-	--ion-color-theme-shade: #7e6593;
-	--ion-color-theme-tint: #9a81b0;
+    --ion-color-theme: #8f73a7;
+    --ion-color-theme-warning: #c9765f;
+    --ion-color-theme-rgb: 143, 115, 167;
+    --ion-color-theme-contrast: #000000;
+    --ion-color-theme-contrast-rgb: 0, 0, 0;
+    --ion-color-theme-shade: #7e6593;
+    --ion-color-theme-tint: #9a81b0;
 
     --ion-color-step-50: #f9e6e9;
     --ion-color-step-100: #f3dbdf;
@@ -138,12 +139,12 @@ swiper-slide img {
 }
 
 .ion-color-theme {
-	--ion-color-base: var(--ion-color-theme);
-	--ion-color-base-rgb: var(--ion-color-theme-rgb);
-	--ion-color-contrast: var(--ion-color-theme-contrast);
-	--ion-color-contrast-rgb: var(--ion-color-theme-contrast-rgb);
-	--ion-color-shade: var(--ion-color-theme-shade);
-	--ion-color-tint: var(--ion-color-theme-tint);
+    --ion-color-base: var(--ion-color-theme);
+    --ion-color-base-rgb: var(--ion-color-theme-rgb);
+    --ion-color-contrast: var(--ion-color-theme-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-theme-contrast-rgb);
+    --ion-color-shade: var(--ion-color-theme-shade);
+    --ion-color-tint: var(--ion-color-theme-tint);
 }
 
 ion-datetime {
@@ -177,6 +178,12 @@ ion-checkbox::part(container) {
     border: 2px solid #0b0318;
 }
 
-app-header {
-    margin-bottom: 50px;
+.toast-success {
+    --background: var(--ion-color-light-10);
+    --color: var(--ion-color-dark-01);
+}
+
+.toast-error {
+    --background: var(--ion-color-accent);
+    --color: var(--ion-color-dark-01);
 }
