--- a/src/app/pages/log-work/log-work.component.scss
+++ b/src/app/pages/log-work/log-work.component.scss
@@ -1,28 +1,14 @@
 :host {
-    // &::after {
-    //     position: absolute;
-    //     top: 0;
-    //     right: 0;
-    //     left: 0;
-    //     bottom: auto;
-    //     content: "";
-    //     width: 100%;
-    //     background-color: var(--ion-color-background);
-    //     height: 140px;
-    //     border-radius: 0 0 30px 30px;
-    // }
     ion-content {
         --background: transparent;
-        top: 40px;
+        --padding-top: 130px !important;
+
+        top: 20px;
 
         .datetime-wrapper {
             display: flex;
             flex-direction: column;
             align-items: center;
-
-            // ion-datetime {
-            //     border: 1px solid var(--ion-color-background);
-            // }
         }
     }
 }
