--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -46,7 +46,7 @@
                 &.title {
                     font-size: 26px;
                     line-height: 40px;
-                    margin-bottom: 30px;
+                    margin-top: 30px;
                     font-weight: bold;
                 }
             }
